--- a/_posts/2017-12-05-信息可视化专题.md
+++ b/_posts/2017-12-05-信息可视化专题.md
@@ -6,79 +6,405 @@ categories: infovis
 image:
   teaser: article9.jpg
 ---
+<body>
+ <h1>中国各省份的发达程度与粗离婚率的关系</h1>
+	<h2>C组成员：谢冠岚 何俊添 罗畅明 何丽华 王志伟 陈嘉劲</h2>
+		<div class="tab_container">
+			<input id="tab1" type="radio" name="tabs" checked>
+			<label for="tab1" class="abc"><i class="fa fa-file-text-o" aria-hidden="true"></i><span>作品简述</span></label>
 
-中国各省份的发达程度与粗离婚率的关系
-==================
+			<input id="tab2" type="radio" name="tabs">
+			<label for="tab2" class="bcd"><i class="fa fa-usd" aria-hidden="true"></i><span>人均GDP</span></label>
 
-C组成员：谢冠岚 何俊添 罗畅明 何丽华 王志伟 陈嘉劲
-----------------------------
+			<input id="tab3" type="radio" name="tabs">
+			<label for="tab3" class="cde"><i class="fa fa-map-o" aria-hidden="true"></i><span>文盲率</span></label>
 
- 作品简述  人均GDP  文盲率  互联网普及率  居民人均消费水平  失业率  城镇人员平均工资
+			<input id="tab4" type="radio" name="tabs">
+			<label for="tab4" class="def"><i class="fa fa-wifi" aria-hidden="true"></i><span>互联网普及率</span></label>
 
-### 省份发达程度与离婚率的关系
+			<input id="tab5" type="radio" name="tabs">
+			<label for="tab5" class="efg"><i class="fa fa-jpy" aria-hidden="true"></i><span>居民人均消费水平</span></label>
+			
+			<input id="tab6" type="radio" name="tabs">
+			<label for="tab6" class="fgh"><i class="fa fa-user" aria-hidden="true"></i><span>失业率</span></label>
 
-全国各地区粗离婚率与人均消费水平、分省员工平均工资水平、文盲率、人均GDP及互联网普及率总体上成正比关系，与失业率大体成反比关系。但通过图表发现一地区人均消费水平保持平稳呈上升趋势，粗离婚率不一定保持平稳上升趋势；特殊省份如西藏，.黑龙江等员工工资水平不符合大体关系；新疆等地的互联网普及率成反比，西藏等地文盲率亦不符合大体规律，失业率譬如新疆等少数地区是呈反比关系。
+			<input id="tab7" type="radio" name="tabs">
+			<label for="tab7" class="ghi"><i class="fa fa-jpy" aria-hidden="true"></i><span>城镇人员平均工资</span></label>
+			
+			<section id="content1" class="tab-content">
+				<h3>省份发达程度与离婚率的关系</h3>
+			    <p>全国各地区粗离婚率与人均消费水平、分省员工平均工资水平、文盲率、人均GDP及互联网普及率总体上成正比关系，与失业率大体成反比关系。但通过图表发现一地区人均消费水平保持平稳呈上升趋势，粗离婚率不一定保持平稳上升趋势；特殊省份如西藏，.黑龙江等员工工资水平不符合大体关系；新疆等地的互联网普及率成反比，西藏等地文盲率亦不符合大体规律，失业率譬如新疆等少数地区是呈反比关系。</p>
+			</section>
 
-[![人均GDP与粗离婚率的分析 ](https://public.tableau.com/static/images/3_/3_896/GDP/1_rss.png)]( )
+			<section id="content2" class="tab-content">
+				<div class='tableauPlaceholder' id='viz1510834009085' style='position: relative'>
+					<noscript>
+						<a href=' '><img alt='人均GDP与粗离婚率的分析 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;3_&#47;3_896&#47;GDP&#47;1_rss.png' style='border: none' /></a>
+					</noscript>
+					<object class='tableauViz'  style='display:none;'>
+						<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+						<param name='embed_code_version' value='3' /> 
+						<param name='site_root' value='' /><param name='name' value='3_896&#47;GDP' />
+						<param name='tabs' value='no' /><param name='toolbar' value='yes' />
+						<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;3_&#47;3_896&#47;GDP&#47;1.png' />
+						<param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' />
+						<param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' />
+						<param name='display_count' value='yes' /><param name='filter' value='publish=yes' />
+					</object>
+				</div>                
+				<script type='text/javascript'>                    
+					var divElement = document.getElementById('viz1510834009085');                    
+					var vizElement = divElement.getElementsByTagName('object')[0];                    
+					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					var scriptElement = document.createElement('script');                    
+					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+				</script>
+			</section>
 
+			<section id="content3" class="tab-content">
+			    <div class='tableauPlaceholder' id='viz1510831889549' style='position: relative'>
+					<noscript>
+						<a href='#'><img alt='故事 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;_1&#47;_15803&#47;1_1&#47;1_rss.png' style='border: none' /></a>
+					</noscript>
+					<object class='tableauViz'  style='display:none;'>
+						<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+						<param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+						<param name='name' value='_15803&#47;1_1' /><param name='tabs' value='no' />
+						<param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;_1&#47;_15803&#47;1_1&#47;1.png' />
+						<param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' />
+						<param name='display_overlay' value='yes' /><param name='display_count' value='yes' />
+					</object>
+				</div>                
+				<script type='text/javascript'>                    
+					var divElement = document.getElementById('viz1510831889549');                    
+					var vizElement = divElement.getElementsByTagName('object')[0];                    
+					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					var scriptElement = document.createElement('script');                    
+					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+				</script>
+				<div class='tableauPlaceholder' id='viz1510836504587' style='position: relative'>
+					<noscript>
+						<a href='#'><img alt='故事 2 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;_1&#47;_15803&#47;2_1&#47;1_rss.png' style='border: none' /></a>
+					</noscript>
+					<object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+						<param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+						<param name='name' value='_15803&#47;2_1' /><param name='tabs' value='no' />
+						<param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;_1&#47;_15803&#47;2_1&#47;1.png' /> 
+						<param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' />
+						<param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' />
+						<param name='display_count' value='yes' />
+					</object>
+				</div>                
+				<script type='text/javascript'>                    
+					var divElement = document.getElementById('viz1510836504587');                    
+					var vizElement = divElement.getElementsByTagName('object')[0];                    
+					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					var scriptElement = document.createElement('script');                    
+					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+				</script>
+			</section>
+
+			<section id="content4" class="tab-content">
+				<div class='tableauPlaceholder' id='viz1510844553918' style='position: relative'>
+					<noscript>
+						<a href=' '><img alt='互联网普及率与粗离婚率的关系 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;_1&#47;_15702&#47;sheet4&#47;1_rss.png' style='border: none' /></a>
+					</noscript>
+					<object class='tableauViz'  style='display:none;'>
+						<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+						<param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+						<param name='name' value='_15702&#47;sheet4' /><param name='tabs' value='no' />
+						<param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;_1&#47;_15702&#47;sheet4&#47;1.png' /> 
+						<param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' />
+						<param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' />
+						<param name='display_count' value='yes' /><param name='filter' value='publish=yes' />
+					</object>
+				</div>                
+				<script type='text/javascript'>                    
+					var divElement = document.getElementById('viz1510844553918');                    
+					var vizElement = divElement.getElementsByTagName('object')[0];                    
+					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					var scriptElement = document.createElement('script');                    
+					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+				</script>
+				<p>通过全国各地区互联网普及率与粗离婚率散点图证明两者间成正比关系；通过柱状图分析得出两者皆呈上升趋势；新疆离婚率与互联网普及率成反比最为特殊，因为其离婚率最高。通过互联网普及率与粗离婚率的仪表板可得出两者间即成正比关系，又因为个别原因，新疆等地区离婚率居高且下降幅度也大，所以新疆离婚率与互联网普及率成反比，但大体而言两者皆呈上升趋势</p>
+			</section>
+
+			<section id="content5" class="tab-content">
+				<div class='tableauPlaceholder' id='viz1510844659066' style='position: relative'>
+					<noscript>
+						<a href=' '><img alt='全国 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;he&#47;helihua&#47;sheet6&#47;1_rss.png' style='border: none' /></a>
+					</noscript>
+					<object class='tableauViz'  style='display:none;'>
+						<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+						<param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+						<param name='name' value='helihua&#47;sheet6' /><param name='tabs' value='no' />
+						<param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;he&#47;helihua&#47;sheet6&#47;1.png' />
+						<param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' />
+						<param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' />
+						<param name='display_count' value='yes' /><param name='filter' value='publish=yes' />
+					</object>
+				</div>                
+				<script type='text/javascript'>                    
+					var divElement = document.getElementById('viz1510844659066');                    
+					var vizElement = divElement.getElementsByTagName('object')[0];                    
+					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					var scriptElement = document.createElement('script');                    
+					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+				</script>
+				<div class='tableauPlaceholder' id='viz1510844722152' style='position: relative'>
+					<noscript>
+						<a href=' '><img alt='北京 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;he&#47;helihua&#47;sheet3&#47;1_rss.png' style='border: none' /></a>
+					</noscript>
+					<object class='tableauViz'  style='display:none;'>
+						<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+						<param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+						<param name='name' value='helihua&#47;sheet3' /><param name='tabs' value='no' />
+						<param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;he&#47;helihua&#47;sheet3&#47;1.png' /> 
+						<param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' />
+						<param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' />
+						<param name='display_count' value='yes' />
+					</object>
+				</div>                
+				<script type='text/javascript'>                    
+					var divElement = document.getElementById('viz1510844722152');                    
+					var vizElement = divElement.getElementsByTagName('object')[0];                    
+					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					var scriptElement = document.createElement('script');                    
+					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+				</script>
+				<p>总体趋势上看，地区人均消费水平与粗离婚率成正比关系，地区人均消费水平升高，粗离婚率也升高。</br>
+					1.并不是人均消费水平越高，粗离婚率也一定越高。通过对比上海和新疆的数据发现，上海的地区居民消费水平高于新疆，但是粗离婚率却低于新疆。通过论文的查阅得出，这和新疆的维吾尔族宗教信仰有关，新疆维吾尔族是支持一夫多妻的。</br>
+					2.一个地区的人均消费水平保持平稳呈上升趋势，粗离婚率不一定保持平稳上升趋势的。通过抽取出北京的居民消费水平和粗离婚率的数据发现，当人均消费水平逐年保持平稳上升的时候，粗离婚率出现小幅度的下降和大幅度的飙升状况。尤其是2013年和2015年飙升幅度最大，通过论文查阅得出，这和2013年以及2015年出台的房产限购政策有关。</br>
+				</p>
+			</section>
+			
+			<section id="content6" class="tab-content">
+				<div class='tableauPlaceholder' id='viz1510835878368' style='position: relative'>
+					<noscript>
+						<a href=' '><img alt='故事 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;2_&#47;2_1961&#47;1_2&#47;1_rss.png' style='border: none' /></ a>
+					</noscript>
+					<object class='tableauViz'  style='display:none;'>
+						<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+						<param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+						<param name='name' value='2_1961&#47;1_2' /><param name='tabs' value='no' />
+						<param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;2_&#47;2_1961&#47;1_2&#47;1.png' /> 
+						<param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' />
+						<param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' />
+						<param name='display_count' value='yes' /><param name='filter' value='publish=yes' />
+					</object>
+				</div>                
+				<script type='text/javascript'>                    
+					var divElement = document.getElementById('viz1510835878368');                    
+					var vizElement = divElement.getElementsByTagName('object')[0];                    
+					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					var scriptElement = document.createElement('script');                    
+					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                   
+					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+				</script>
+			</section>
+			
+			<section id="content7" class="tab-content">
+				<div class='tableauPlaceholder' id='viz1510839085241' style='position: relative'>
+					<noscript>
+						<a href='#'><img alt='仪表板 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;_1&#47;_15796&#47;1_1&#47;1_rss.png' style='border: none' /></a>
+					</noscript>
+					<object class='tableauViz'  style='display:none;'>
+						<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+						<param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+						<param name='name' value='_15796&#47;1_1' /><param name='tabs' value='no' />
+						<param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;_1&#47;_15796&#47;1_1&#47;1.png' />
+						<param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' />
+						<param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' />
+						<param name='display_count' value='yes' />
+					</object>
+				</div>                
+				<script type='text/javascript'>                    
+					var divElement = document.getElementById('viz1510839085241');                    
+					var vizElement = divElement.getElementsByTagName('object')[0];                    
+					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					var scriptElement = document.createElement('script');                    
+					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+				</script>
+				<p>随着社会的发展，城镇人员工资增长，人们物质能力增强了，个人经济收入分开了，都拥有了自己的生活能力。有自己的生活能力，有钱了，个人经济收入分开，这个在我觉得是影响离婚率的一个原因。</p>
+			</section>
+			
+		</div>
+
+<p class="no_wrap">
+数据来源：
+<a href="http://data.stats.gov.cn/" target="_blank">国家数据网<a/>
+</p>
+<style type="text/css">
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css');
+
+*,
+*:after,
+*:before {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.clearfix:before,
+.clearfix:after {
+	content: " ";
+	display: table;
+}
+
+.clearfix:after {
+	clear: both;
+}
+
+body {
+	font-family:sans-serif;
+	background: #deddfa;
+}
+
+p{
+	color:#000000;
+}
+
+h1 {
+	color: #000000;
+	text-align: center;
+	font-family:YouYuan;
+	padding-top: 40px;
+	font-size:30px;
+
+}
+h2 {
+	color: #4F4F4F;
+	text-align: center;
+	font-size:20px;
+}
+H3 {
+	color: #333C6E;
+span {
+	font-size:5px;
+}
+
+a {
+   color: #000000;
+   text-decoration: none;
+   outline: none;
+}
+
+}
+/*Fun begins*/
+.tab_container {
+	width: 90%;
+	margin: 0 auto;
+	padding-top: 70px;
+	position: relative;
+}
+
+input, section {
+  clear: both;
+  padding-top: 10px;
+  display: none;
+}
+
+label {
+  font-weight: 700px;
+  font-size: 0.9em;
+  display: block;
+  float: left;
+  width: 14.255%;
+  padding: 1.5em;
+  color: #ffffff;
+  cursor: pointer;
+  text-decoration: none;
+  text-align: center;
+  opacity:0.5;
+  filter:alpha(opacity=50);
+  background:#5250b2;
+}
+
+					
+#tab1:checked ~ #content1,
+#tab2:checked ~ #content2,
+#tab3:checked ~ #content3,
+#tab4:checked ~ #content4,
+#tab5:checked ~ #content5,
+#tab6:checked ~ #content6, 
+#tab7:checked ~ #content7
+{
+  display: block;
+  padding: 20px;
+  background: #fff;
+  color: #999;
+  border-bottom: 2px solid #f0f0f0;
+}
+
+.tab_container .tab-content p,
+.tab_container .tab-content h3 {
+  -webkit-animation: fadeInScale 0.7s ease-in-out;
+  -moz-animation: fadeInScale 0.7s ease-in-out;
+  animation: fadeInScale 0.7s ease-in-out;
+}
+.tab_container .tab-content h3  {
+  text-align: center;
+}
+
+.tab_container [id^="tab"]:checked + label {
+  background: #a450b2;
+  box-shadow: inset 0 3px 	#b301b4;
+}
+
+.tab_container [id^="tab"]:checked + label .fa {
+  color: 	#C0C0C0;
+}
+
+label .fa {
+  font-size: 1.3em;
+  margin: 0 0.4em 0 0;
+}
+
+
+/*Media query*/
+@media only screen and (max-width: 900px) {
+  label span {
+    display: none;
+  }
   
+  .tab_container {
+    width: 98%;
+  }
+}
 
-var divElement = document.getElementById('viz1510834009085'); var vizElement = divElement.getElementsByTagName('object')\[0\]; vizElement.style.width='100%';vizElement.style.height='100%'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);
-
-[![故事 1 ](https://public.tableau.com/static/images/_1/_15803/1_1/1_rss.png)](#)
-
+/*Content Animation*/
+@keyframes fadeInScale {
+  0% {
+  	transform: scale(0.9);
+  	opacity: 0;
+  }
   
+  100% {
+  	transform: scale(1);
+  	opacity: 1;
+  }
+}
 
-var divElement = document.getElementById('viz1510831889549'); var vizElement = divElement.getElementsByTagName('object')\[0\]; vizElement.style.width='100%';vizElement.style.height='100%'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);
+.fa-github {
+	font-size: 3em;
+}
 
-[![故事 2 ](https://public.tableau.com/static/images/_1/_15803/2_1/1_rss.png)](#)
-
-  
-
-var divElement = document.getElementById('viz1510836504587'); var vizElement = divElement.getElementsByTagName('object')\[0\]; vizElement.style.width='100%';vizElement.style.height='100%'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);
-
-[![互联网普及率与粗离婚率的关系 ](https://public.tableau.com/static/images/_1/_15702/sheet4/1_rss.png)]( )
-
-  
-
-var divElement = document.getElementById('viz1510844553918'); var vizElement = divElement.getElementsByTagName('object')\[0\]; vizElement.style.width='100%';vizElement.style.height='100%'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);
-
-通过全国各地区互联网普及率与粗离婚率散点图证明两者间成正比关系；通过柱状图分析得出两者皆呈上升趋势；新疆离婚率与互联网普及率成反比最为特殊，因为其离婚率最高。通过互联网普及率与粗离婚率的仪表板可得出两者间即成正比关系，又因为个别原因，新疆等地区离婚率居高且下降幅度也大，所以新疆离婚率与互联网普及率成反比，但大体而言两者皆呈上升趋势
-
-[![全国 ](https://public.tableau.com/static/images/he/helihua/sheet6/1_rss.png)]( )
-
-  
-
-var divElement = document.getElementById('viz1510844659066'); var vizElement = divElement.getElementsByTagName('object')\[0\]; vizElement.style.width='100%';vizElement.style.height='100%'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);
-
-[![北京 ](https://public.tableau.com/static/images/he/helihua/sheet3/1_rss.png)]( )
-
-  
-
-var divElement = document.getElementById('viz1510844722152'); var vizElement = divElement.getElementsByTagName('object')\[0\]; vizElement.style.width='100%';vizElement.style.height='100%'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);
-
-总体趋势上看，地区人均消费水平与粗离婚率成正比关系，地区人均消费水平升高，粗离婚率也升高。  
-1.并不是人均消费水平越高，粗离婚率也一定越高。通过对比上海和新疆的数据发现，上海的地区居民消费水平高于新疆，但是粗离婚率却低于新疆。通过论文的查阅得出，这和新疆的维吾尔族宗教信仰有关，新疆维吾尔族是支持一夫多妻的。  
-2.一个地区的人均消费水平保持平稳呈上升趋势，粗离婚率不一定保持平稳上升趋势的。通过抽取出北京的居民消费水平和粗离婚率的数据发现，当人均消费水平逐年保持平稳上升的时候，粗离婚率出现小幅度的下降和大幅度的飙升状况。尤其是2013年和2015年飙升幅度最大，通过论文查阅得出，这和2013年以及2015年出台的房产限购政策有关。  
-
-[![故事 1 ](https://public.tableau.com/static/images/2_/2_1961/1_2/1_rss.png)]( )
-
- []( ) 
-
-[var divElement = document.getElementById('viz1510835878368'); var vizElement = divElement.getElementsByTagName('object')\[0\]; vizElement.style.width='100%';vizElement.style.height='100%'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);]( )
-
-[]( )
-
-[]( )
-
-[]( )
-
-[]( )[![仪表板 1 ](https://public.tableau.com/static/images/_1/_15796/1_1/1_rss.png)](#)
-
-  
-
-var divElement = document.getElementById('viz1510839085241'); var vizElement = divElement.getElementsByTagName('object')\[0\]; vizElement.style.width='100%';vizElement.style.height='100%'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);
-
-随着社会的发展，城镇人员工资增长，人们物质能力增强了，个人经济收入分开了，都拥有了自己的生活能力。有自己的生活能力，有钱了，个人经济收入分开，这个在我觉得是影响离婚率的一个原因。
-
-数据来源： [国家数据网](http://data.stats.gov.cn/)
+.no_wrap {
+  text-align:center;
+  color: #CCC;
+}
+	
+.name {
+  font-size: 0.8em;
+  text-align:center;
+  color: #AAA;
+}
+</style>
+</body>	
